# RealTime_GraphicFrame

./: README.md  pyproject.toml
src/realtime_graphicframe/: main.py  signal_plot.py
src/realtime_graphicframe/armband/: __init__.py  data_parser.py  data_reader.py  device_socket.py
src/realtime_graphicframe/resources/qss/: blue.txt
src/realtime_graphicframe/ui/: main.ui  main_ui.py  resource.qrc  resource_rc.py
